# apertium-fin-fao

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  ap_include.am  apertium-fin-fao.fin-fao.dix  autogen.sh  configure.ac  modes.xml
test/: tests.json
